name:                chr2sql
version:             0.1.0.0
synopsis:            CHR2 to SQL converter           
license:             BSD3
license-file:        LICENSE
author:              Vitaliy Akimov
maintainer:          vitaliy.akimiv@gmail.com
category:            Constraints
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable chr2sql
  main-is:             CHR2.hs
  other-modules:       CHR2.AST.Untyped, 
                       CHR2.Target.PostgreSQL, 
                       CHR2.Compile
  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6, 
                       interpolate >=0.1 && <0.2, mtl >=2.1 && <2.2, 
                       text >=1.2 && <1.3, bytestring >= 0.10 && < 0.11,
                       split >=0.2 && <0.3, persistent >= 2.1 && < 2.2, 
                       lens >= 4.9 && < 5, ansi-wl-pprint >= 0.6 && < 0.7,
                       utf8-string >= 1, unordered-containers >= 0.2 && < 0.3,
                       trifecta >= 1.5 && < 1.6, parsers >= 0.12 && < 0.13
  default-language:    Haskell2010
